[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/bullet_particle.png" type="Texture" id=1]
[ext_resource path="res://scripts/Bullets/EnergyBullet.gd" type="Script" id=2]
[ext_resource path="res://sprites/GrosseBouboule.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 90.7789

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.536913, 1 )
colors = PoolColorArray( 1, 0.129412, 0.129412, 1, 0.819608, 0.615686, 0.180392, 1, 0, 0, 0, 1 )

[node name="GrosseBouboule" type="Node2D"]
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.779538, 0.111365 )
scale = Vector2( 1.27645, 1.27258 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 53.4142, 5.65685 )
rotation = 5.10851
shape = SubResource( 1 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 75
one_shot = true
speed_scale = 1.78
explosiveness = 1.0
randomness = 0.48
lifetime_randomness = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 400.0
initial_velocity_random = 0.37
orbit_velocity = 0.5
orbit_velocity_random = 0.13
scale_amount = 8.0
color_ramp = SubResource( 2 )

[node name="ParticulesContinu" type="CPUParticles2D" parent="."]
scale = Vector2( 2, 0.6 )
amount = 15
lifetime = 0.5
local_coords = false
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 80.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
scale_amount = 0.15
hue_variation_random = 1.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
